@@ -1,2 +1,2 @@
-// 1.20.2	2024-02-09T22:15:06.1640283	Sound Definitions
-4ccbd3ca7a19beb013161938768aec8735b275f8 assets/chilibulletweapons/sounds.json
+// 1.20.2	2024-03-14T21:40:54.4369735	Sound Definitions
+400385a8a8b36d091bdc143c0538d6b8c2d4723c assets/chilibulletweapons/sounds.json
