@@ -1,6 +1,5 @@
-// 1.20.2	2024-03-14T21:00:42.7529536	Recipes
+// 1.20.2	2024-03-14T21:40:54.4327677	Recipes
 8cc901569c970db6a888b446879bb1e4ff5944e4 data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun.json
-e4695735a7f18dd8ac13832b21365e61d20933b0 data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun_upgrading.json
 49b64d298cf5b719096b1b798ef1e5527dffc463 data/chilibulletweapons/advancements/recipes/combat/chili_bullet.json
 a87698a84af8b7f5207171dfbc39a8c341cb412c data/chilibulletweapons/advancements/recipes/combat/gun.json
 6b455db22d2e110d8bf9102e0bd0663d356f7722 data/chilibulletweapons/advancements/recipes/food/chili_chicken_sandwich.json
@@ -18,8 +17,10 @@ e2917ade5f37e5807c92290a0adaa83cbb032b68 data/chilibulletweapons/advancements/re
 eb0d73a1d3f05e65899f9a7a91864ee33dc2f7bd data/chilibulletweapons/advancements/recipes/misc/chili_seeds.json
 b83613acead90f964fbbd4e0130729b4edb296a5 data/chilibulletweapons/advancements/recipes/misc/curved_chili_from_sack.json
 ff1ec9b22fa0025e84480abbe64130f6a547dcf1 data/chilibulletweapons/advancements/recipes/misc/curved_chili_sack.json
-66122f0136e1a4144fd06d078d817860808ff3d2 data/chilibulletweapons/recipes/bayoneted_gun.json
-effeb35e01257e8c2751582cd9e40a2fce7b05db data/chilibulletweapons/recipes/bayoneted_gun_upgrading.json
+cc7778946861725aaff73b114281fbbdb96c9536 data/chilibulletweapons/advancements/recipes/misc/upgrade_gun_barrel.json
+9124874a94e0b39b8d3636a8e582ab1d0df7a286 data/chilibulletweapons/advancements/recipes/misc/upgrade_gun_bayonet.json
+a2147553ce4a00b9bb5c1c1c63503fdfe8304db3 data/chilibulletweapons/advancements/recipes/misc/upgrade_gun_mechanism.json
+1d91fd9155ba194bbf131a505e6f792815778d9c data/chilibulletweapons/recipes/bayoneted_gun.json
 60dbca9953956dbf28cd3b6c59b4e37a30c4f693 data/chilibulletweapons/recipes/bullet_chili_from_sack.json
 97235932162f4d9cb93806ef85c7e89775247963 data/chilibulletweapons/recipes/bullet_chili_sack.json
 f51652659b03401db01b010acc39813e271175fe data/chilibulletweapons/recipes/chili_bullet.json
@@ -37,3 +38,6 @@ eb6a06d71e7be557d85bf5852e04a2adf9eebff4 data/chilibulletweapons/recipes/gun.jso
 c9eb6fc1aaf6e4a3958cb9943b69cd5d83532a11 data/chilibulletweapons/recipes/half_chili_meat_sandwich.json
 8aa81d3a29d5aeb0990237761feb65a891374c2f data/chilibulletweapons/recipes/half_chili_potato_sandwich.json
 631091eaedf4d795b9c0148767e8f4aae2a8622c data/chilibulletweapons/recipes/pasta_oil_and_chili.json
+7227b19466cb1e8d3b569f75575d5bc42e036114 data/chilibulletweapons/recipes/upgrade_gun_barrel.json
+c59415b55c308ea89a904e62360f000c9ee1dfbf data/chilibulletweapons/recipes/upgrade_gun_bayonet.json
+b04c39be6df5ecc16fc4d9ede036111159a85180 data/chilibulletweapons/recipes/upgrade_gun_mechanism.json
