@@ -1,2 +1,2 @@
-// 1.20.2	2024-03-14T21:00:42.7550233	Languages: en_us
-f2c2577ce9ec2e482de1edd997ca4429a95e8e55 assets/chilibulletweapons/lang/en_us.json
+// 1.20.2	2024-03-14T21:40:54.4348247	Languages: en_us
+32ec761277baf6c875b3925063c3e21b0390f37c assets/chilibulletweapons/lang/en_us.json
