@@ -1,0 +1,35 @@
+{
+  "parent": "minecraft:recipes/root",
+  "criteria": {
+    "has_gun": {
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "chilibulletweapons:gun"
+            ]
+          }
+        ]
+      },
+      "trigger": "minecraft:inventory_changed"
+    },
+    "has_the_recipe": {
+      "conditions": {
+        "recipe": "chilibulletweapons:upgrade_gun_barrel"
+      },
+      "trigger": "minecraft:recipe_unlocked"
+    }
+  },
+  "requirements": [
+    [
+      "has_the_recipe",
+      "has_gun"
+    ]
+  ],
+  "rewards": {
+    "recipes": [
+      "chilibulletweapons:upgrade_gun_barrel"
+    ]
+  },
+  "sends_telemetry_event": false
+}
