@@ -15,7 +15,7 @@
     },
     "has_the_recipe": {
       "conditions": {
-        "recipe": "chilibulletweapons:bayoneted_gun_upgrading"
+        "recipe": "chilibulletweapons:upgrade_gun_mechanism"
       },
       "trigger": "minecraft:recipe_unlocked"
     }
@@ -28,7 +28,7 @@
   ],
   "rewards": {
     "recipes": [
-      "chilibulletweapons:bayoneted_gun_upgrading"
+      "chilibulletweapons:upgrade_gun_mechanism"
     ]
   },
   "sends_telemetry_event": false
